Atualização de CSS da página home

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -23,8 +23,8 @@
     <!-- HEADER  -->
     <header>
       <!-- NAVBAR -->
+      <img id="logo" src="/IMAGES/logo.png" alt="logo" />
       <nav id="navbar">
-        <img id="logo" src="" alt="logo" />
         <ul id="pages_links">
           <li id="home"><a href="/HTML/home.html">Início</a></li>
           <li id="menu"><a href="">Cardápio</a></li>
