Atualização do css da página

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -56,7 +56,7 @@
     <!-- SECTION / ABOUT -->
     <section id="about">
       <div id="card_image_about">
-        <img src="" alt="image_about" />
+        <img id="image_about" src="/IMAGES/img_about.jpg" alt="image_about" />
       </div>
       <div id="card_text_about">
         <h2 id="title_text_about">Quem somos?</h2>
@@ -73,15 +73,15 @@
     <footer>
       <!-- Informações -->
       <div id="info_footer">
-        <div id="card_location">
+        <div class="card_info" id="card_location">
           <span class="material-symbols-outlined"> location_on </span>
           <p>Rua bla bla bla</p>
         </div>
-        <div id="card_phone">
+        <div class="card_info" id="card_phone">
           <span class="material-symbols-outlined"> call </span>
           <p>(11)40028922</p>
         </div>
-        <div id="card_mail">
+        <div class="card_info" id="card_mail">
           <span class="material-symbols-outlined"> mail </span>
           <p>example123@gmail.com</p>
         </div>
