Atualização do css da página home

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -44,13 +44,11 @@
     <!-- SECTION / CARROUSEL -->
     <section id="carousel">
       <div id="card_carousel">
-        <p id="arrowleft" class="setas">&LeftArrow;</p>
         <img
           id="image_carousel"
-          src="/IMAGES/carousel1.jpg"
+          src="/IMAGES/carousel2.jpg"
           alt="image_carousel"
         />
-        <p id="arrowright" class="setas">&RightArrow;</p>
       </div>
     </section>
     <!-- SECTION / ABOUT -->
@@ -60,13 +58,42 @@
       </div>
       <div id="card_text_about">
         <h2 id="title_text_about">Quem somos?</h2>
-        <p id="text_about">bla bla bla</p>
+        <p id="text_about">
+          Na Fiorinni, acreditamos que pizza é mais do que um prato — é uma
+          experiência que une pessoas, aquece corações e transforma momentos
+          simples em memórias especiais. Nossa história começa com uma paixão
+          familiar pela culinária italiana, passada de geração em geração, até
+          encontrar seu lar definitivo em nosso forno a lenha. Cada massa que
+          abrimos, cada molho que preparamos e cada ingrediente que escolhemos
+          carrega o cuidado, o sabor e a tradição que nos tornaram quem somos:
+          uma pizzaria que valoriza o artesanal, o autêntico e o sabor de
+          verdade. Aqui, você encontra muito mais do que pizzas. Você encontra
+          sorrisos sinceros, aromas irresistíveis e uma equipe que ama o que
+          faz. Da clássica Margherita à ousada Fiorinni Especial, cada receita é
+          feita com ingredientes frescos, massas fermentadas naturalmente e
+          aquele toque de carinho que só uma pizzaria de alma italiana pode
+          oferecer. Seja para um jantar em família, uma comemoração entre amigos
+          ou aquela noite em que só uma boa pizza resolve, a Fiorinni é o lugar
+          certo para viver bons momentos. Fiorinni. Tradição, sabor e amor em
+          cada fatia.
+        </p>
       </div>
     </section>
     <!-- SECTION / SOCIAL-->
     <section id="social">
       <div id="card_social">
         <h2>NOS ACOMPANHE NAS REDES SOCIAIS</h2>
+        <div id="conteiner_images">
+          <img class="images_social" src="/IMAGES/r1.jpg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r2.jpg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r3.jpg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r4.jpg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r5.jpg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r6.jpg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r7.jpeg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r8.jpg" alt="imagem" />
+          <img class="images_social" src="/IMAGES/r9.jpeg" alt="imagem" />
+        </div>
       </div>
     </section>
     <!-- Footer -->
@@ -75,21 +102,21 @@
       <div id="info_footer">
         <div class="card_info" id="card_location">
           <span class="material-symbols-outlined"> location_on </span>
-          <p>Rua bla bla bla</p>
+          <p>Rua das Oliveiras, 187 – Bairro San Martino, São Paulo – SP</p>
         </div>
         <div class="card_info" id="card_phone">
           <span class="material-symbols-outlined"> call </span>
-          <p>(11)40028922</p>
+          <p>(11) 3456-7890</p>
         </div>
         <div class="card_info" id="card_mail">
           <span class="material-symbols-outlined"> mail </span>
-          <p>example123@gmail.com</p>
+          <p>contato@pizzariafiorinni.com.br</p>
         </div>
         <!-- Mais informações -->
       </div>
       <div id="More_info_footer">
         <h2 id="title_more_info">FIORINNI PIZZERIA</h2>
-        <p id="text_more_info">bla bla bla</p>
+        <p id="text_more_info">Conheça a melhor pizza da região!</p>
       </div>
     </footer>
   </body>
